Commit de teste antes da entrega final

--- a/examples/config.ini
+++ b/examples/config.ini
@@ -1,10 +1,10 @@
 [TCP]
-ip=192.168.0.10   
-port=8080_abc
+ip=192.168.0.10
+port=8080
 protocol=TCP
 
 [UART]
-baudrate=not_a_number
+baudrate=9600
 data_bits=8
 parity=none
 stop_bits=1
