Commit de teste antes da entrega final

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 project(ConfigurationManager)
 
-set(CMAKE_CXX_STANDARD 23) # Habilita o std::expected (C++23) 
+set(CMAKE_CXX_STANDARD 23) 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include lib) # Onde estão os .hpp
+include_directories(include lib) 
 
 add_executable(config_manager_exe 
     src/main.cpp 
